@@ -56,6 +56,7 @@
       - New Rename and Copy actions (hidden)
       - New tool to unify icons colors
       - Fixed icons colors
+     * Differentiate between FW and ID errors in the wizard, update texts
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
